# Face-Detection-TFLite-JNI-Android

./: .gitmodules  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/cuongvng/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: centerface.tflite
app/src/main/cpp/: CMakeLists.txt  face-detection.cpp  face-detection.h  main-native-lib.cpp  native-lib.cpp
app/src/main/java/cuongvng/facedetection/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cuongvng/facedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
